<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="user"
            type="com.gapstars.gitprofilemvp.model.data.response.User" />

        <variable
            name="adapterPinned"
            type="com.gapstars.gitprofilemvp.ui.profile.RepositoryPinnedAdapter" />

        <variable
            name="adapter"
            type="com.gapstars.gitprofilemvp.ui.profile.RepositoryAdapter" />

        <variable
            name="adapterStarred"
            type="com.gapstars.gitprofilemvp.ui.profile.RepositoryStarredAdapter" />

        <variable
            name="progressVisibility"
            type="Integer" />
    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/srl_profile"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/padding_16dp">

                <ProgressBar
                    android:id="@+id/progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="@{safeUnbox(progressVisibility)}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_profile_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_profile"
                    android:theme="@style/TextProfileTitle"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_profile"
                    android:layout_width="@dimen/padding_88dp"
                    android:layout_height="@dimen/padding_88dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/padding_40dp"
                    android:clickable="true"
                    android:elevation="5dp"
                    android:focusable="true"
                    android:scaleType="centerCrop"
                    android:src="@{user.avatarUrl}"
                    app:civ_border_color="#FFFFFFFF"
                    app:civ_border_width="3dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_profile_title" />

                <TextView
                    android:id="@+id/tv_owner_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding_8dp"
                    android:layout_marginBottom="@dimen/padding_16dp"
                    android:text="@{user.name}"
                    android:theme="@style/TextProfileName"
                    app:layout_constraintLeft_toRightOf="@id/iv_profile"
                    app:layout_constraintTop_toTopOf="@id/iv_profile" />

                <TextView
                    android:id="@+id/tv_git_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding_8dp"
                    android:layout_marginBottom="@dimen/padding_16dp"
                    android:text="@{user.login}"
                    android:theme="@style/TextGitName"
                    app:layout_constraintBottom_toBottomOf="@id/iv_profile"
                    app:layout_constraintLeft_toRightOf="@id/iv_profile"
                    app:layout_constraintTop_toBottomOf="@id/tv_owner_name" />

                <TextView
                    android:id="@+id/tv_owner_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_24dp"
                    android:text="@{user.email}"
                    android:theme="@style/TextGitName"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_profile" />

                <TextView
                    android:id="@+id/tv_followers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_16dp"
                    android:text="@{user.followers.totalCount.toString()}"
                    android:theme="@style/TextGitName"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_owner_email" />

                <TextView
                    android:id="@+id/tv_followers_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding_5dp"
                    android:layout_marginTop="@dimen/padding_16dp"
                    android:text="@string/text_followers"
                    android:theme="@style/TextGitName"
                    app:layout_constraintLeft_toRightOf="@id/tv_followers"
                    app:layout_constraintTop_toBottomOf="@id/tv_owner_email" />

                <TextView
                    android:id="@+id/tv_following"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding_16dp"
                    android:layout_marginTop="@dimen/padding_16dp"
                    android:text="@{user.following.totalCount.toString()}"
                    android:theme="@style/TextGitName"
                    app:layout_constraintLeft_toRightOf="@id/tv_followers_text"
                    app:layout_constraintTop_toBottomOf="@id/tv_owner_email" />

                <TextView
                    android:id="@+id/tv_following_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding_5dp"
                    android:layout_marginTop="@dimen/padding_16dp"
                    android:text="@string/text_following"
                    android:theme="@style/TextGitName"
                    app:layout_constraintLeft_toRightOf="@id/tv_following"
                    app:layout_constraintTop_toBottomOf="@id/tv_owner_email" />

                <TextView
                    android:id="@+id/tv_Pinned"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_24dp"
                    android:text="@string/text_pinned"
                    android:theme="@style/TextPinnedTitle"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_followers" />

                <TextView
                    android:id="@+id/tv_pinned_view_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_all"
                    android:theme="@style/TextGitName"
                    app:layout_constraintBottom_toBottomOf="@id/tv_Pinned"
                    app:layout_constraintRight_toRightOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_pinned_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/padding_m5dp"
                    android:layout_marginRight="@dimen/padding_m5dp"
                    android:layout_marginTop="@dimen/padding_16dp"
                    app:adapter="@{adapterPinned}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_Pinned" />

                <TextView
                    android:id="@+id/tv_top_repos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_24dp"
                    android:text="@string/text_top_repos"
                    android:theme="@style/TextPinnedTitle"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rv_pinned_list" />

                <TextView
                    android:id="@+id/tv_top_repos_view_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_all"
                    android:theme="@style/TextGitName"
                    app:layout_constraintBottom_toBottomOf="@id/tv_top_repos"
                    app:layout_constraintRight_toRightOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_top_repos_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/padding_m5dp"
                    android:layout_marginRight="@dimen/padding_m5dp"
                    android:layout_marginTop="@dimen/padding_16dp"
                    android:orientation="horizontal"
                    app:adapter="@{adapter}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_top_repos" />

                <TextView
                    android:id="@+id/tv_starred_repos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_24dp"
                    android:text="@string/text_starred_repos"
                    android:theme="@style/TextPinnedTitle"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rv_top_repos_list" />

                <TextView
                    android:id="@+id/tv_starred_repos_view_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_all"
                    android:theme="@style/TextGitName"
                    app:layout_constraintBottom_toBottomOf="@id/tv_starred_repos"
                    app:layout_constraintRight_toRightOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_starred_repos_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/padding_m5dp"
                    android:layout_marginRight="@dimen/padding_m5dp"
                    android:layout_marginTop="@dimen/padding_16dp"
                    android:orientation="horizontal"
                    app:adapter="@{adapterStarred}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_starred_repos" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>